@@ -1,4 +1,4 @@
-$Id: HISTORY,v 1.1668 2007-12-18 21:35:12 debug Exp $
+$Id: HISTORY,v 1.1669 2007-12-21 18:16:57 debug Exp $
 
 Changelog for GXemul:
 ---------------------
@@ -3742,3 +3742,5 @@ Changelog for GXemul:
 		Adding skeleton Action, ActionStack, and UnitTest frameworks.
 20071218	Continuing on the ActionStack and the UnitTest framework.
 		Adding a small intro.html documentation page.
+20071219	(Making release 0.4.6.1 from the non-C++ branch.)
+20071221	Some extremely minor Doxygen comment updates.
